# schema

./: .gitignore  .markdownlint-cli2.yaml  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/scripts/: requirements.txt
.github/workflows/: actionlint.yml  docs.yml  lint.yml  pypi.yml  test.yml
docs/: github-taxonomy-automation.md
scripts/: ruff.sh
src/instructlab/schema/: __init__.py  taxonomy.py
src/instructlab/schema/v1/: compositional_skills.json  knowledge.json
src/instructlab/schema/v2/: knowledge.json
src/instructlab/schema/v3/: knowledge.json  version.json
tests/: conftest.py  test_parse.py  test_versions.py
tests/testdata/compositional_skills/array_yaml/: qna.yaml
tests/testdata/compositional_skills/invalid_yaml/: qna.yaml
tests/testdata/compositional_skills/invalid_yaml_1/: qna.yaml
tests/testdata/compositional_skills/skill_valid/: qna.yaml
tests/testdata/compositional_skills/version_1/: qna.yaml
tests/testdata/knowledge/invalid_name/: file.yaml
v2/: compositional_skills.json  knowledge.json  version.json
